--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1811,61 +1811,45 @@
     }
    ],
    "source": [
-    "import streamlit as st\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Leer el archivo CSV\n",
-    "try:\n",
-    "    df_crypto_dashboard = pd.read_csv('/Users/benjaminzelaya/Desktop/PI_DA-main/PI_2_Henry/DASHBOARD/dataframes_dashboard.csv')\n",
-    "except Exception as e:\n",
-    "    print(\"Error al leer el archivo CSV:\", e)\n",
-    "\n",
-    "# Título de la aplicación\n",
-    "st.title('Análisis de Criptomonedas')\n",
-    "\n",
-    "# Mostrar el DataFrame\n",
-    "st.write('Datos de criptomonedas:')\n",
-    "st.dataframe(df_crypto_dashboard)\n",
-    "\n",
-    "# Crear una lista de años correspondientes\n",
+    "# Crear una lista de DataFrames y años correspondientes\n",
+    "dfs = [df_btc_2020, df_btc_2021, df_btc_2022, df_btc_2023]\n",
     "years = [2020, 2021, 2022, 2023]\n",
     "\n",
-    "# Configurar la aplicación de Streamlit\n",
-    "st.title('Cryptocurrency Dashboard')\n",
+    "# Configurar el diseño de los subplots\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(12, 12))\n",
     "\n",
-    "# Iterar a través de los DataFrames y años para generar los gráficos\n",
-    "for year in years:\n",
-    "    st.subheader(f'Scatter Plot of BTC Price ({year})')\n",
+    "# Iterar a través de los DataFrames y años para generar los subgráficos\n",
+    "for i, df in enumerate(dfs):\n",
+    "    row = i // 2\n",
+    "    col = i % 2\n",
     "    \n",
-    "    # Filtrar el DataFrame por el año actual\n",
-    "    df_year = df_crypto_dashboard[df_crypto_dashboard['date'].dt.year == year]\n",
-    "    \n",
-    "    # Crear el gráfico de dispersión\n",
-    "    fig, ax = plt.subplots()\n",
-    "    df_year.plot(x='date', y='price', kind='scatter', ax=ax)\n",
+    "    ax = df.plot(x='date', y='price', kind='scatter', ax=axes[row, col])\n",
+    "    ax.set_xlabel('Date')\n",
+    "    ax.set_ylabel('Price')\n",
+    "    ax.set_title(f'Scatter Plot of BTC Price ({years[i]})')\n",
     "    \n",
     "    # Obtener el ATH del año actual\n",
-    "    ath_value = df_year['price'].max()\n",
+    "    ath_value = df['price'].max()\n",
     "    \n",
     "    # Obtener la fecha correspondiente al ATH\n",
-    "    ath_date = df_year.loc[df_year['price'].idxmax()]['date']\n",
+    "    ath_date = df.loc[df['price'].idxmax()]['date']\n",
     "    \n",
     "    # Agregar la línea indicadora del ATH\n",
     "    ax.axhline(y=ath_value, color='red', linestyle='--', label='ATH')\n",
     "    \n",
     "    # Formatear la fecha del ATH para mostrar solo el año, mes y día (sin hora)\n",
-    "    formatted_ath_date = ath_date.split()[0]\n",
+    "    formatted_ath_date = ath_date.strftime('%Y-%m-%d')\n",
     "    \n",
-    "    # Agregar anotación para mostrar el valor y la fecha del ATH en el gráfico\n",
+    "    # Agregar anotación para mostrar el valor y la fecha del ATH en cada punto\n",
     "    ax.annotate(f'Value: {ath_value:.2f}\\nDate: {formatted_ath_date}', xy=(ath_date, ath_value),\n",
     "                xytext=(10, 40), textcoords='offset points', arrowprops=dict(arrowstyle='->'))\n",
-    "    \n",
+    "\n",
     "    # Mostrar leyenda\n",
     "    ax.legend()\n",
-    "    \n",
-    "    # Mostrar el gráfico en la aplicación de Streamlit\n",
-    "    st.pyplot(fig)\n",
+    "\n",
+    "# Ajustar el diseño de los subplots y mostrar el gráfico\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
     "\n"
    ]
   },
@@ -3272,7 +3256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -3451,7 +3435,7 @@
        "[12928 rows x 7 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
