--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -4614,10 +4614,7 @@
     "\n",
     "* Al observar la distribución general de los puntos en cada gráfico, identificamos justamente las tendencias y patrones en los movimientos de precios a lo largo de los años. Esto puede proporcionar información sobre cómo BTC y ADA han respondido a diferentes condiciones del mercado en diferentes momentos.\n",
     "\n",
-    "Volatilidad y estabilidad: Si los puntos están más dispersos, indica una mayor volatilidad de precios en ese año, mientras que si están más cerca, sugiere una mayor estabilidad de precios. Puedes observar si los años con ATH coinciden con periodos de alta volatilidad o si los precios se mantuvieron más estables durante esos periodos.\n",
-    "Comparación entre años: Al visualizar los gráficos uno al lado del otro, puedes comparar cómo han evolucionado los precios y los ATH de BTC y ADA a lo largo de los años. Esto te ayudará a evaluar si hay años en los que uno de los activos supera significativamente al otro en términos de rendimiento.\n",
-    "Valor y fecha del ATH: Las anotaciones en cada punto muestran el valor y la fecha del ATH correspondiente. Esto te permite identificar momentos específicos en los que BTC y ADA alcanzaron sus máximos históricos.\n",
-    "Recuerda que la interpretación de los gráficos debe complementarse con análisis más detallados y contexto del mercado para obtener una comprensión completa de cómo los precios de BTC y ADA han evolucionado a lo largo del tiempo"
+    "* Los puntos están más dispersos, nos indican una mayor volatilidad de precios en ese año, mientras que los que están más cerca, sugieren una mayor estabilidad de precios. "
    ]
   }
  ],
