--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -2092,20 +2092,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bitcoin 2020: todos los acontecimientos \n",
+    "## Bitcoin 2020 acontecimientos :\n",
     "\n",
-    "* 2020 ha sido un año de grandes acontecimientos para Bitcoin y para todo el ecosistema que le rodea. Un año donde Bitcoin logró máximos históricos en varias métricas. Sus desarrolladores comenzaron a tener más financiamiento, se formalizaron mejoras para su escalabilidad, porque empresas reconocidas fuera del ecosistema empezaron a implicarse. Además, otros negocios empezaron a usarlo como fondo en sus tesorerías y como colofón: su irrupción en las Defi.\n",
+    "### 2020 ha sido un año de grandes acontecimientos para Bitcoin y para todo el ecosistema que le rodea. Un año donde Bitcoin logró máximos históricos en varias métricas. Sus desarrolladores comenzaron a tener más financiamiento, se formalizaron mejoras para su escalabilidad, porque empresas reconocidas fuera del ecosistema empezaron a implicarse. Además, otros negocios empezaron a usarlo como fondo en sus tesorerías y como colofón: su irrupción en las Defi.\n",
     "\n",
-    "* Fue un año en que sucedió el 4to halving en Bitcoin, donde lo mineros pasaron de ganar 12,5 BTC por bloque a 6,25 BTC, con cierta incertidumbre sobre la rentabilidad. En cambio, el hashrate de Bitcoin ha tocado nuevos máximos históricos, mostrando una mayor participación de mineros o de mejores equipos desde el inicio del año. \n",
+    "### Fue un año en que sucedió el 4to halving en Bitcoin, donde lo mineros pasaron de ganar 12,5 BTC por bloque a 6,25 BTC, con cierta incertidumbre sobre la rentabilidad. En cambio, el hashrate de Bitcoin ha tocado nuevos máximos históricos, mostrando una mayor participación de mineros o de mejores equipos desde el inicio del año. \n",
     "\n",
-    "* Uno de los acontecimientos más inesperados de 2020 fue que Paypal comenzó a permitir transacciones de compraventa de bitcoin y otras criptomonedas en su plataforma. Aunque, solo está disponible para usuarios de Estados Unidos, tienen planes de ampliar el alcance del servicio.\n",
+    "### Uno de los acontecimientos más inesperados de 2020 fue que Paypal comenzó a permitir transacciones de compraventa de bitcoin y otras criptomonedas en su plataforma. Aunque, solo está disponible para usuarios de Estados Unidos, tienen planes de ampliar el alcance del servicio.\n",
     "\n",
-    "* ambién ha sido el año en que empresas cotizadas en bolsas y que no están directamente relacionadas con las criptomonedas comenzaron a comprar bitcoin para sus tesorerías. El pionero más notable en esta practica es la empresa Microstrategy, que en lo que va del año ha recaudado 45.000 BTC para sus reservas. Este movimiento por parte de Microstrategy ha inspirado a varias empresas como Mode Global Holdings, Mass Mutual, Stone Ridge Holdings Group y Ruffer Investment a obtener alguna exposición a bitcoin. Muchos analistas de mercado consideran que esta nueva tendencia es lo que ha potenciado el precio de bitcoin a nuevos máximos.\n",
+    "### ambién ha sido el año en que empresas cotizadas en bolsas y que no están directamente relacionadas con las criptomonedas comenzaron a comprar bitcoin para sus tesorerías. El pionero más notable en esta practica es la empresa Microstrategy, que en lo que va del año ha recaudado 45.000 BTC para sus reservas. Este movimiento por parte de Microstrategy ha inspirado a varias empresas como Mode Global Holdings, Mass Mutual, Stone Ridge Holdings Group y Ruffer Investment a obtener alguna exposición a bitcoin. Muchos analistas de mercado consideran que esta nueva tendencia es lo que ha potenciado el precio de bitcoin a nuevos máximos.\n",
     "\n",
-    "* Uno de los acontecimientos más sorprendentes de 2020 fue el explosivo crecimiento de las Defi. Aunque la mayoría de su actividad se concentró en Ethereum, bitcoin también participó con el token wBTC, que está anclado a su precio. Incluso, de acuerdo al portal Defi Pulse, está cerrando el año como la segunda herramienta Defi con mayor valor depositado.\n",
+    "### Uno de los acontecimientos más sorprendentes de 2020 fue el explosivo crecimiento de las Defi. Aunque la mayoría de su actividad se concentró en Ethereum, bitcoin también participó con el token wBTC, que está anclado a su precio. Incluso, de acuerdo al portal Defi Pulse, está cerrando el año como la segunda herramienta Defi con mayor valor depositado.\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bitcoin 2021 acontecimientos :\n",
+    "\n",
+    "### América vio su primer ETF de Bitcoin:\n",
+    "A principios de año, los reguladores de Canadá aprobaron el primer fondo cotizado en bolsa (ETF) respaldado por Bitcoin. El producto de inversión, denominado Purpose Bitcoin ETF y basado en la mayor criptomoneda, fue el primero de su tipo en toda América. A lo largo de 2021, el país norteamericano vio debutar otros ETF de Bitcoin, así como el primer ETF de Ethereum de la historia.\n",
+    "\n",
+    "La actitud de los los reguladores canadienses fue decisiva y despejó el camino para otros ETF de criptomonedas en el continente. En Sudamérica, las bolsas de países como Chile y Brasil listaron el producto, y pronto Brasil debutó con su propio ETF de criptomoneda. Luego, hacia finales del año, Estados Unidos también vio por primera vez un vehículo de inversión de este tipo, después de años de espera.\n",
+    "\n",
+    "La Comisión de Bolsa y Valores (SEC) de EE. UU. aprobó en octubre un primer ETF de futuros de Bitcoin. El producto de ProShares debutó en la bolsa NYSE marcando un momento histórico para cripto.\n",
+    "\n",
+    "### En marzo de 2021, el gigante banco de inversiones Morgan Stanley hizo historia tras convertirse en el primer gran banco de los Estados Unidos en ofrecer a sus clientes exposición a Bitcoin. En ese momento, el banco de 90 años de antigüedad anunció que sus clientes de alto patrimonio podrían obtener acceso a fondos del principal activo digital por primera vez.\n",
+    "\n",
+    "El movimiento representó un completo cambio de juego para los titanes de Wall Street (así como para bancos de todo el mundo), que se apresuraron a seguir los pasos de Morgan Stanley. A lo largo de los últimos meses, nombres conocidos como Goldman Sachs, JPMorgan y Wells Fargo también se abrieron a las monedas digitales; algunos incluso están invirtiendo activamente en el mercado.\n",
+    "\n",
+    "### La adopción generalizada y los diversos acontecimientos históricos que marcaron a la industria de monedas digitales tuvieron un gran efecto en el mercado de Bitcoin, que registró varios nuevos récords de precio a lo largo del año.\n",
+    "\n",
+    "A inicios de 2021, la criptomoneda insigne superó con creces su máximo de 20.000 dólares registrado en 2017. Luego, siguió rompiendo récords para alcanzar una cima de precio muy cercana a los USD $70.000 en noviembre, al tiempo que su capitalización de mercado superó por primera vez los USD $1,2 billones, su valor más alto hasta la fecha."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bitcoin 2022 acontecimientos :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "### En 2022 el precio de bitcoin vivió una caída estrepitosa. Pero el año también estuvo marcado por acontecimientos que impulsaron la adopción:\n",
+    "\n",
+    "### Una de las noticias destacadas en 2022 tiene que ver con el caos que se generó en el ecosistema a partir de la pérdida de paridad con el dólar de la stablecoin de la red Terra, una criptomoneda estable algorítmica que se fue a pique en cuestión de días.\n",
+    "\n",
+    "Todo comenzó el pasado 9 de mayo, cuando la Fundación Luna, entidad detrás del desarrollo de la red Terra, prestó poco más de 20 mil bitcoins (BTC) y 750 millones de terra a empresas privadas a fin de intentar mantener la paridad 1:1 con el dólar tanto de terra (LUNA) como terra USD (UST).\n",
+    "\n",
+    "Días después, entre el lunes 9 y el martes 10 de mayo, se liquidaron posiciones alcistas apalancadas por USD 103 millones debido a que las stablecoins no recuperaban su paridad. Ya para el 12 de mayo Terra quedó paralizada para introducir un parche, a la altura del bloque 7.603.700. La red fue pausada por segunda vez al día siguiente con el objetivo de restaurarla red al estado previo al «ataque» que habría sufrido, según sus desarrolladores.\n",
+    "La implosión de Terra disparó las alarmas de los legisladores de todo el mundo. En varias partes del planeta se comenzó a pedir que se acelere la tramitación de las leyes para regular a la industria de los criptoactivos, con el objetivo de contar con instrumentos legales que ofrezcan mayor protección a los usuarios.\n",
+    "\n",
+    "Incluso, la secretaria del Tesoro de Estados Unidos, Janet Yellen, advirtió sobre la necesidad de contar con un marco regulatorio para las stablecoins. Por su parte, la Comisión Europea llegó a considerar duras medidas sobre las monedas estables, al punto de pensar en prohibirlas con la idea de evitar que lleguen a reemplazar al euro.\n",
+    "\n",
+    "###  El mes de julio, la empresa de préstamos e inversiones con bitcoin (BTC) y criptomonedas, Celsius, se declaró en bancarrota.\n",
+    "\n",
+    "Desde un mes antes ya la compañía había pausado todos los retiros por tiempo indefinido, alegando falta de liquidez. Las causas de la quiebra se hallan en la pérdida de paridad con ether (ETH), la criptomoneda de Ethereum, del token sintético stETH.\n",
+    "\n",
+    "A semejanza de lo que sucedió con Terra, a lo anterior se sumaron retiros masivos de los clientes, lo que derivó en una crisis de liquidez de la empresa.\n",
+    "\n",
+    "Entre los sucesos más impactantes está lo que ocurrió tras la primera audiencia sobre la bancarrota de Celsius, en la cual los abogados de la empresa afirmaron que los usuarios cedieron la tenencia de los activos al registrarse.\n",
+    "\n",
+    "En este escenario, la restitución de retiros para más de 1,7 millones de usuarios registrados en la plataforma quedó en espera indefinida. La firma llamó a la «aceptación» de la comunidad ante cualquier plan de «reorganización»\n",
+    "\n",
+    "### Entre los eventos de mayor impacto del año se haya la estrepitosa caída del exchange FTX. Todo comenzó a inicios de noviembre, cuando el medio de comunicación Coindesk publicó un informe en el que cuestiona el manejo del exchange.\n",
+    "\n",
+    "A partir de esta publicación, el CEO de Binance, Changpeng Zhao, anunció que liquidaría sus tenencias en FTT, el token de FTX, el cual comenzó a bajar rápidamente de precio.\n",
+    "\n",
+    "El anuncio fue el inicio de una seguidilla de hechos que encenderían la alarmas en la comunidad y darían a pie uno de los mayores escándalos del ecosistema. Esa misma semana Changpeng Zhao firmó un acuerdo no vinculante para la compra de FTX en un intento por salvar a la plataforma competidora de la debacle. Poco después dijo que era imposible cumplir con ese acuerdo.\n",
+    "\n",
+    "En ese contexto, el CEO de FTX, Sam Bankman-Fried (alias SBF), buscó en vano establecer alianzas a fin de encontrar el capital para recuperar la empresa, una gestión que fue imposible por lo que se declaró en quiebra para el 11 de noviembre de 2022.\n",
+    "\n",
+    "Con la quiebra se desató el efecto domino, debido al colapso de empresas relacionadas con el famoso exchange, entre ellas se encuentran BlockFi y Génesis Capital.\n",
+    "\n",
+    "Al mismo tiempo, salieron a la luz los manejos turbios que se hicieron con FTX, una plataforma que llego a estar entre las 3 primeras del mundo, y que, según se reveló, malversó el dinero que los clientes depositaron en el exchange. Todo se hizo en una serie de movimientos financieros arriesgados vinculados con la filial de la empresa, Alameda Research.\n",
+    "\n",
+    "Las pérdidas por el colapso de FTX superan los USD 8 mil millones mientras miles de inversionistas tienen pocas esperanzas de recuperar su dinero. Entre tanto, los reguladores presionan por ejercer mayor control sobre el ecosistema y el mundo de las criptomonedas se enfrenta al desprestigio causado por uno de sus principales actores centralizados\n",
+    "\n",
+    "Como parte de las repercusiones del colapso, los exchanges de criptomonedas, empezando por Binance, anunciaron la publicación de sus pruebas de reserva. Un mecanismo que serviría para hacer públicas sus tenencias y permitiría a los clientes saber si tienen respaldo.\n",
+    "\n",
+    "SBF, que primero estuvo encarcelado en Bahamas, ya fue extraditado a los Estados Unidos y actualmente está en libertad condicional a la espera de su juicio en el cual enfrentará cargos por fraude.\n",
+    "\n",
+    "Las críticas a la fianza no se han hecho esperar. Sobre todo, considerando los vínculos de SBF con algunos reguladores y con la política estadounidense, muchos de cuyos miembros se vieron beneficiados por sus donaciones.\n",
+    "\n",
+    "###   Bukele ataca a los poderosos del mundo y defiende a bitcoin:\n",
+    "\n",
+    "En medio de las constantes críticas al hecho de haber declarado en 2021 a bitcoin como moneda de curso legal, y a las compras de BTC realizadas por el gobierno, el presidente salvadoreño, Nayib Bukele, se enfrentó a organismos poderosos que siguen criticando su postura.\n",
+    "\n",
+    "En septiembre pasado, el mandatario dio un discurso en la 77° Asamblea General de las Naciones Unidas (ONU). Allí exigió que los países y organizaciones críticos de su gobierno dejen que su país transite hacia la libertad, entre ellas, la financiera.\n",
+    "\n",
+    "Bukele también publicó un artículo en Bitcoin Magazine en donde dibujó un panorama en el cual su gobierno, en cuanto a Bitcoin se refiere, no está solamente batallando a la oposición política interna de su país. La lucha es, dijo, «contra el sistema mismo, por el futuro de la humanidad».\n",
+    "\n",
+    "Bukele dio su discurso tomando en cuenta que los cuestionamientos a las decisiones relacionadas con bitcoin se arreciaron a inicios de 2022. En marzo, 100 legisladores del Senado de Estados Unidos aprobaron un proyecto de ley que permitirá que las agencias gubernamentales investiguen una larga lista de temas respecto a El Salvador y la criptomoneda.\n",
+    "\n",
+    "El argumento para dar consentimiento a la denominada «Ley de Responsabilidad por las Criptomonedas en El Salvador» o «Ley ACES» es proteger el sistema financiero de EE. UU., ya que temen que la adopción de bitcoin como moneda de curso legal los pueda afectar.\n",
+    "\n",
+    "La respuesta de Bukele a través de Twitter no se hizo esperar. «Nunca en mis sueños más locos hubiera pensado que el gobierno de los Estados Unidos tendría miedo de lo que estamos haciendo aquí».\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BITCOIN 2023 acontecimientos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
