--- a/EDA/eda.ipynb
+++ b/EDA/eda.ipynb
@@ -2211,7 +2211,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### la crisis financiera que tuvo lugar desde marzo de 2023 genero un gran nivel de desconfianza en relación al sistema financiero tradicional. Eso terminó generando una ayuda para las empresas del mercado de criptoactivos, e hizo que los inversores reevalúen donde deseaban guardar su dinero.\n",
+    "\n",
+    "### Otro de los factores que impulso este año viene siendo la expectativa de que la agresiva política de suba de tasas de interés de la Reserva Federal esté llegando a su fin, más allá de los dos futuros aumentos anunciados recientemente.\n",
+    "\n",
+    "### Por otra parte, durante los primeros meses de 2023, surgieron nuevos casos de uso dentro de la red de Bitcoin que atrajeron tanto a usuarios como a desarrolladores. El movimiento estuvo liderado por un protocolo llamado “Inscriptions” que permite la creación de NFTs y tokens directamente sobre Bitcoin.Esto provocó mayor interés e impactó en la cantidad de transacciones diarias, que llegaron a un pico de casi 700.000 a fines de mayo. “Aunque estos nuevos casos de uso causaron divisiones y polémica dentro de la comunidad de Bitcoin, no se puede negar que impulsaron la demanda y el interés en la red.\n",
+    "\n",
+    "### Una señal prometedora fue protagonizada por Blackrock, el mayor gestor de activos de inversión del mundo, al solicitar un ETF de Bitcoin. Dicha petición inspiró a más instituciones financieras como WisdomTree, Valkyrie Investments, Invesco, Bitwise, entre otras, a presentar ETFs de Bitcoin también, esto va a permitir que el dinero institucional vuelva a entrar a la industria de las criptomonedas a través de Bitcoin e indica que el mercado financiero tradicional tiene su mirada puesta en el mundo cripto."
+   ]
   },
   {
    "cell_type": "markdown",
